Changed app name from flutter_lyrics to My Lyrics

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="flutter_lyrics"
+        android:label="My Lyrics"
         android:icon="@mipmap/ture">
         <activity
             android:name=".MainActivity"
