--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   theme_provider: 0.4.0+1
   lottie: 0.7.0+1
   url_launcher: 5.7.10
+  cached_network_image: 2.5.1
 
 dev_dependencies:
   flutter_test:
