--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   lottie: 0.7.0+1
   url_launcher: 5.7.10
   cached_network_image: 2.5.1
+  html: 0.14.0+4
 
 dev_dependencies:
   flutter_test:
