--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
   hive_generator: 0.8.2
   build_runner: ^1.8.0
   flutter_launcher_icons: 0.8.1
+  change_app_package_name: 0.1.3
 
 flutter:
   uses-material-design: true
