--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,33 +6,33 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.5+6
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.0
-  dio: 3.0.10
-  flutter_bloc: 6.1.3
-  get_it: ^5.0.1
-  flare_flutter: 2.0.6
-  hive: 1.5.0-pre
-  hive_flutter: 0.3.1
-  path_provider: 1.6.28
-  theme_provider: 0.4.0+1
-  lottie: 0.7.0+1
-  url_launcher: 5.7.10
-  cached_network_image: 2.5.1
-  html: 0.14.0+4
+  cupertino_icons: ^1.0.4
+  dio: ^4.0.6
+  flutter_bloc: ^7.2.0
+  get_it: ^7.2.0
+  flare_flutter: ^3.0.2
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.9
+  theme_provider: ^0.5.0
+  lottie: ^1.2.2
+  url_launcher: ^6.1.0
+  cached_network_image: ^3.2.0
+  html: ^0.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: 0.8.2
-  build_runner: ^1.8.0
-  flutter_launcher_icons: 0.8.1
-  change_app_package_name: 0.1.3
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.10
+  flutter_launcher_icons: ^0.9.2
+  change_app_package_name: ^1.0.0
 
 flutter:
   uses-material-design: true
